Revert "Revert "Merge pull request #20 from stylbandeira/feature/update-more-efficient-search-methods""
This reverts commit 0f060ab0d4fd8842101a0416557fc4533a1718b6.
